# eigensort

./: pyproject.toml
src/eigensort/: __init__.py
